About
=====
This file lists changes between tagged gorilla releases.

New releases are tagged twice, as "go1" and using the release
version, e.g. "r2012.04.05". So the go tool will always get the
latest version and a specific version can be pulled using its tag.

Changes that are not backward compatible are highligthed below
using an exclamation mark between brackets, as in "[!]".

gorilla r2012.08.03
-------------------
- sessions:
  - [Fix] FilesystemStore no longer skips saving empty sessions.
- Added package reverse, to reverse URL route regexps.
- Package cleanup to remove external dependencies and experimental
  packages. These were moved to code.google.com/p/sadbox:
  - appengine
  - color
  - css
  - gettext
  - http
  - i18n
  - requestdata
  - sessions/mongodb
  - template

gorilla r2012.05.04
-------------------
- [!] pat: renamed Router.Del method to Delete. It doesn't make sense
  to shorten the HTTP method name, even less to save only three
  letters.
- [Fix] sessions: when a session option's MaxAge is less than 0,
  a date in the past is set as the value for the Expires field.
- sessions: FilesystemStore's filenames now use alphanumeric
  characters only.
- sessions: when a session is created, default Options are set,
  so that session.Options is immediately available for use.
- schema: an error that is a map[path]error is returned in case of
  conversion errors. empty values are ignored.
- Added package css/scanner, a compliant tokenizer for CSS3.

gorilla r2012.04.13
-------------------
- [!] securecookie: changed decoding order to decrypt only after
  HMAC was successfully verified. As a result existing values
  will fail to decode.
- [Fix] mux: the StrictSlash option is now ignored when a path
  prefix is used. Thanks, Vasiliy Tolstov.
- [Fix] rpc/json: DecodeClientResponse now properly returns the
  error from the RPC call, if any, instead of trying to decode the
  result. Thanks, Graham Miller.