@@ -9,6 +9,13 @@ latest version and a specific version can be pulled using its tag.
 Changes that are not backward compatible are highligthed below
 using an exclamation mark between brackets, as in "[!]".
 
+gorilla r2012.08.03b
+--------------------
+- [!] context: simplified interface with Set, Get and Delete
+  standalone functions, and no more context struct. By consequence,
+  DefaultContext no longer exists. Updating is trivial: replace
+  all occurrences of "context.DefaultContext" by simply "context".
+
 gorilla r2012.08.03
 -------------------
 - sessions:
